--- a/config.example.toml
+++ b/config.example.toml
@@ -6,6 +6,11 @@ secret_key = "your_aliyun_secret_key"
 access_key = "your_tencentcloud_access_key"
 secret_key = "your_tencentcloud_secret_key"
 
+[akilight]
+access_key = "your_akilight_access_key"
+secret_key = "your_akilight_secret_key"
+Endpoint = "your_akilight_endpoint"
+
 [[domains]]
 domain_name = "example1.com"
 request_platform = "aliyun"
